Fri Feb 15 10:35:54 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* re.c (rb_reg_quote): set US-ACII for ASCII-only string.
	  [ruby-dev:33785]

Fri Feb 15 10:27:47 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* {win,bcc}32/Makefile.sub (config.h): added HAVE_FTRUNCATE.
	  [ruby-dev:33786]

Fri Feb 15 09:44:11 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (reg_compile_gen): reg_fragment_setenc might not raise an
	  exception before rb_reg_compile.

Fri Feb 15 07:37:40 2008  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc/ri/paths.rb: Preserve compatibility with 1.8.

Fri Feb 15 02:42:25 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (ftruncate): check if available.

	* file.c (rb_file_truncate): check if ftruncate instead of truncate.

Fri Feb 15 02:40:54 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (sigsetmask): check when signal semantics is not POSIX.

	* signal.c (USE_TRAP_MASK): set true if sigprocmask or sigsetmask is
	  available.

Thu Feb 14 23:56:38 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval_error.c (error_print): append a newline to rest lines.

	* parse.y (reg_compile_gen): appends error message from
	  rb_reg_compile() to one from reg_fragment_setenc().

Thu Feb 14 21:00:14 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (io_reopen): check STDIN, STDOUT and STDERR mode according to
	  stdio streams.

Thu Feb 14 16:07:40 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* test/ruby/test_math.rb: actual-expected argument ordering for
	  test_math.rb fixed.  a patch from Tadashi Saito
	  <shiba AT mail2.accsnet.ne.jp> in [ruby-dev:33770].

Thu Feb 14 16:02:51 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_s_utime): inhibits with secure level 2 or higher.

Thu Feb 14 12:30:02 2008  Tanaka Akira  <akr@fsij.org>

	* re.c (rb_reg_preprocess_dregexp): use non-preprocessed regexp source
	  for result.

Thu Feb 14 01:43:16 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
