@@ -1,3 +1,8 @@
+Fri Feb 15 15:23:12 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/iconv/iconv.c (iconv_convert): check upper bound.  a patch from
+	  Daniel Luz at [ruby-Bugs-17910].
+
 Fri Feb 15 10:35:54 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* re.c (rb_reg_quote): set US-ACII for ASCII-only string.
